# SSL_video

./: .gitignore  README.md  important.py  job.sh  pyproject.toml  run.sh  setup.cfg  severe_benchmark.sh  svt.sh  test.py  unrar.py
SimCLR feature extractor/: README.md  fextractor.py
SimCLR_feature_extractor/: README.md  fextractor.py
jobs/: job.sh
jobs/linear-evaluation/: slurm-17139060.out  slurm-17139334.out  slurm-17139348.out  slurm-17139380.out  slurm-17139391.out  slurm-17139426.out  slurm-17139433.out  slurm-17139445.out  slurm-17139468.out  slurm-17184084.out
jobs/sample_size_testing/: slurm-17129587.out  slurm-17129612.out  slurm-17129662.out  slurm-17129689.out  slurm-17129726.out  slurm-17129775.out  slurm-17129815.out  slurm-17129868.out  slurm-17129878.out  slurm-17129894.out  slurm-17129908.out
jobs/sample_size_training/: slurm-17043989.out  slurm-17043991.out  slurm-17043992.out  slurm-17043993.out  slurm-17043994.out  slurm-17043995.out  slurm-17043996.out  slurm-17044007.out  slurm-17044020.out  slurm-17044035.out  slurm-17044038.out
jobs/taghsim/: frame.sh  test.py  zip.sh
scripts/: setup.sh
severe_benchmark/: README.md
severe_benchmark/action_recognition/scripts_sample_sizes/: test.sh
src/: __init__.py  eval.py  finetune.py  image_warping.py  main.py  predict.py  predict_all_frame_of_all_videos.py  predict_byol.py  predict_simclr.py  predict_simsiam.py  predict_swav.py  predict_two_frame_of_one_video.py  predict_vicregl.py  pretrain.py  test.py  vicreg_criterion.py
src/configs/: TimeSformer_divST_8x32_224.yaml  config.yaml  downsample_videos.yaml  prepare_csv.yaml
src/configs/dataset/: kinetics.yaml
src/datasets/: data_utils.py  decoder.py  defaults.py  kinetics.py  new_transform.py  parser.py  random.py  transform.py  ucf101.py  ucf101_no_label.py  ucftransform.py  video_container.py
src/losses/: vicregl.py
src/models/: feature_extractor.py  frame_extraction.py  model.py  optimizers.py  r2p1d.py  resnet.py  resnet_simclr.py  resnet_vicregl.py  vicreg.py  vicregl.py
src/optimizers/: optimizers.py
src/predict_ssl/: predict_byol.py  predict_simclr.py  predict_simsiam.py  predict_swav.py  predict_vicregl.py
src/utils/: defaults.py  distributed.py  model_utils.py  utils.py
(+18 files in other folders)
