[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name= "ssl_video"
version= "0.0.1"
description = "SSL video project"
authors = ["Ali Harake, Sonia Dastani"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11.4"

torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
kornia = "^0.6.12"

hydra-core = "^1.3.2"
wandb = "^0.15.5"

einops = "^0.6.1"

av = "^10.0.0"

tqdm = "^4.65.0"