[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name= "ssl_video"
version= "0.0.1"
description = "SSL video project"
authors = ["Ali Harake, Sonia Dastani"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3.2"
wandb = "^0.15.5"
einops = "^0.6.1"
av = "^10.0.0"
tqdm = "^4.65.0"
kornia = "^0.6.12"
decord = "^0.6.0"
opnecv-python = "^4.8.0.74"
compress-pickle = "^2.1.0"
pandas = "^2.0.3"
scikit-image = "^0.21.0"
joblib = "^1.3.1"
matplotlib = "^3.7.2"