[metadata]
name=SSL_video
version=0.0.1

[options]
package_dir=
    =src
packages=find:

python_requires = ==3.10.6

install_requires =
    torch
    torchvision
    flake8>=4.0.1
    flake8-docstrings>=1.6.0
    gitpython>=3.1.27
    pyyaml>=6.0
    sphinx>=5.1.1
    sphinx-autoapi>=1.9.0
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-napoleon>=0.7
    sphinxcontrib-katex>=0.8.6
    tqdm>=4.64.0
    pandas>=1.5.1
    seaborn>=0.12.1
    matplotlib>=3.6.2

[options.packages.find]
where=src

[options.extras_require]
test =
    pycodestyle
    pytest
    pytest-cov
all =
    %(test)s

[options.entry_points]
console_scripts =
    train=src.train:main
    predict=src.predict:main
